feat: 智能体优化